--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" type="text/css" href="style.css">
   <title>運試し</title>
   <script type="text/javascript" src="app.js"></script>
+  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </head>
 
 <body>
@@ -27,6 +28,16 @@
 
 <p id="count" class="count">0</p>
 
+<div class="logs">
+  <table border="1" width="100" height="150">
+    <tr>
+      <th>最高記録</th>
+    </tr>
+    <tr>
+      <td id="log">0</td>
+    </tr>
+  </table>
+</div>
 
 </body>
 </html>
