--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <p>
           下の２つのボタンからお好きな方をお選び下さい。正解を選ぶとカウントが追加されていきます。不正解の場合は０から再スタートです。
         </p>
-        <p>何回でも挑戦して下さい。それでも５連続正解以上は難しいです。:D</p>
+        <p>何回でも挑戦して下さい。それでも７連続以上成功は難しいです。:D</p>
       </div>
 
       <div class="content">
