--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>運試し</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-    <script type="text/javascript" src="app.js"></script>
+    <script type="text/javascript" src="./js/app.js"></script>
+    <script type="text/javascript" src="./js/tweet.js"></script>
   </head>
 
   <body>
@@ -19,11 +20,11 @@
         <p>
           下の２つのボタンからお好きな方をお選び下さい。正解を選ぶとカウントが追加されていきます。不正解の場合は０から再スタートです。
         </p>
-        <p>何回でも挑戦して下さい。それでも７連続以上成功は難しいです。:D</p>
+        <p>何回でも挑戦して下さい。それでも５連続正解以上は難しいです。:D</p>
       </div>
 
       <div class="content">
-        <input type="button" class="button lbutton" onClick="push(1)" />
+        <input type="button" class="button lbutton" onClick="push(1)", />
         <input type="button" class="button rbutton" onClick="push(2)" />
       </div>
     </div>
@@ -32,12 +33,14 @@
 
     <div class="logs">
 
-      <table border="1" width="100" height="150">
+      <table border="1">
         <tr>
-          <th>最高記録</th>
+          <th width="110" height="30">最高記録</th>
+          <th width="110" height="30">挑戦回数</th>
         </tr>
         <tr>
-          <td id="log">0</td>
+          <td id="high_score" height="100">0</td>
+          <td id="battle_count" height="100">0</td>
         </tr>
       </table>
       
