--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>運試し</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-    <script type="text/javascript" src="./js/app.js"></script>
-    <script type="text/javascript" src="./js/tweet.js"></script>
+    <script type="text/javascript" src="app.js"></script>
+    <script type="text/javascript" src="tweet.js"></script>
   </head>
 
   <body>
