--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
         <input type="button" class="button lbutton" onClick="push(1)", />
         <input type="button" class="button rbutton" onClick="push(2)" />
       </div>
+      <audio id="t_sound" preload="auto">
+        <source src="true_sound.wav" type="audio/wav">
+      </audio>
+      <audio id="f_sound" preload="auto">
+        <source src="false_sound.wav" type="audio/wav">
+      </audio>
+      
     </div>
 
     <p id="count" class="count">0</p>
